added paytm project

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,3 +7,17 @@ body{
 * {
     font-family: 'Roboto Mono', monospace;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+.navItem{
+    color: red;
+}
+.navItem:hover{
+    text-decoration: underline;
+    text-underline-offset: 0.5rem;
+}
